Inmemory todolist feature

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>BlazorTodo | Tasks</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Blazor Todo App!</h1>
 
-Welcome to your new app.
+<TodoList/>
