--- a/app/Components/Pages/Home.razor
+++ b/app/Components/Pages/Home.razor
@@ -1,7 +1,20 @@
 ﻿@page "/"
 
+@using BlazorTodo.Components.TaskList;
+@using BlazorTodo.Components.TodoList;
+@using System.ComponentModel
+@using BlazorTodo.DAL
+@using BlazorTodo.Infrastructure
+@using Microsoft.EntityFrameworkCore
+
+    
 <PageTitle>BlazorTodo | Tasks</PageTitle>
 
 <h1>Blazor Todo App!</h1>
 
-<TodoList/>
+<TodoList />
+
+
+
+@code{
+}
