Make same contex for life of repository

--- a/app/Components/TodoList/TodoList.razor
+++ b/app/Components/TodoList/TodoList.razor
@@ -99,6 +99,7 @@
     {
         if (ViewModel != null){
             ViewModel.PropertyChanged -= OnPropertyChangedHandler;
+            ViewModel.Dispose();
             ViewModel = null;
         }
     }
